--- a/bug-solving/src/app/navbar/navbar.component.html
+++ b/bug-solving/src/app/navbar/navbar.component.html
@@ -21,8 +21,8 @@
       </div>
     </div>
   </span>
-  <span class="menu"><a routerLink="/allissue">All Issue</a></span>
-  <span class="menu"><a routerLink="/issueform">CreateIssue</a></span>
+  <span class="menu"><a routerLink="/project/allissue">All Issue</a></span>
+  <span class="menu"><a routerLink="/project/issueform">CreateIssue</a></span>
   <span class="example-spacer"></span>
   <span>{{ name }}</span>
   <img class="userimage" src="{{ photo }}" />
