--- a/bug-solving/src/app/issuedetail/issuedetail.component.css
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.css
@@ -2,23 +2,22 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    /* display: inline-block; */
-    background-color: blueviolet;
+
     height: auto;
     width: auto;
-    justify-content:center;
     clear: both;
-}
-.user{
-    
-    width: 300px;
-    height: 300px;
-    background-color: brown;
-    float: left;
+    justify-content: center;
 }
 .issuedetails{
-    width: 300px;
-    height: 300px;
-    background-color: rgb(42, 124, 165);
-    float: right
+    width: 800px;
+    height: 400px;
+    background-color:whitesmoke;
+    overflow: scroll;
+}
+mat-card{
+    text-align: center;
+    width: auto;
+}
+mat-grid-tile{
+    background-color: coral;
 }
