--- a/bug-solving/src/app/issuedetail/issuedetail.component.html
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.html
@@ -1,9 +1,13 @@
+
 <div class="container">
-    <div class="user">
-
-    </div>
-    <div class="issuedetails">
-        
-    </div>
-
+  <div class="issuedetails">
+     <mat-card>
+        <mat-card-title> this is title</mat-card-title>
+        <mat-card-content>this is discription about project</mat-card-content>
+      </mat-card>
+      <mat-grid-list cols="2" rowHeight="7:1">
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+      </mat-grid-list>
+  </div>
 </div>
