--- a/bug-solving/src/app/roadmap/roadmap.component.css
+++ b/bug-solving/src/app/roadmap/roadmap.component.css
@@ -1,10 +1,17 @@
-.table {
-    /* border: 1px solid black; */
-    width: 800px;
-    margin: 0 auto;
-    background-color: whitesmoke;
+mat-grid-tile {
+  background:white;
 }
-.container{
-    display: flex;
-    flex-wrap: wrap;
+mat-grid-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 800px;
+  margin: 0 auto;
+}
+
+.item{
+    margin-left: 10%;
+}
+.index{
+    margin-left: 0px;
 }
