--- a/bug-solving/src/app/roadmap/roadmap.component.html
+++ b/bug-solving/src/app/roadmap/roadmap.component.html
@@ -1,28 +1,9 @@
-<div class="container">
+<mat-grid-list cols="1" rowHeight="2:.1">
+    <mat-grid-tile  *ngFor="let data of userservice.issue; index as i">
+        <div class="index item">{{ i + 1 }}</div>
+        <div class="title item">{{data.title}}</div>
+        <div class="status item">{{data.status}}</div>
+    </mat-grid-tile>
 
-    <table class="table table-striped">
-        <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">Issue Name</th>
-        <th scope="col">Status</th>
-    </tr>
-</thead>
-
-<tbody>
-   
-
-        <tr *ngFor="let data of userservice.issue; index as i" (click)="openSnackBar(data.title,'Clicked') " (click)="issuedetails(data)" >
-            <th scope="row">{{ i + 1 }}</th>
-            <td>
-                <ngb-highlight [result]="data.title"></ngb-highlight>
-            </td>
-            <td><ngb-highlight [result]="data.status" ></ngb-highlight></td>
-        </tr>
-
-    </tbody>
-</table>
-  <!-- <button (click)="update('4fc2442c-0243-40d4-a60a-eab00195e73b')">update</button> -->
-  
-</div>
+  </mat-grid-list>
 
