--- a/bug-solving/src/app/projectdetails/projectdetails.component.html
+++ b/bug-solving/src/app/projectdetails/projectdetails.component.html
@@ -7,16 +7,17 @@
         userservice.projectdetails.discription
       }}</mat-card-subtitle>
     </mat-card-header>
+    <mat-card-actions >
+        <mat-icon>add_circle_outline</mat-icon>
+        <a routerLink="/project/issueform">create issue</a>
+    </mat-card-actions>
   </mat-card>
-  <mat-card class="createbutton">
-    <mat-icon>add_circle_outline</mat-icon>
-    <a routerLink="/project/issueform">create issue</a>
-  </mat-card>
-  <mat-card class="issuelist">
+  <mat-card class="issuelist" >
     <mat-card-title> issue list </mat-card-title>
     <mat-card-content *ngFor="let data of userservice.issue">
-        <div class="oneissue" *ngIf="data.project_id == userservice.projectdetails.id">
-          {{ data.title }}
+        <div class="oneissue" *ngIf="data.project_id == userservice.projectdetails.id" >
+         <button mat-button (click)="issuedetails(data)"> {{ data.title }}</button>
+         <button mat-button (click)="userservice.deleteissue(data.issue_id)"><mat-icon>delete</mat-icon></button> 
         </div>
     </mat-card-content>
   </mat-card>
