--- a/bug-solving/src/app/roadmap/roadmap.component.css
+++ b/bug-solving/src/app/roadmap/roadmap.component.css
@@ -5,7 +5,7 @@ mat-grid-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 800px;
+  width: auto;
   margin: 0 auto;
 }
 
@@ -14,4 +14,8 @@ mat-grid-list {
 }
 .index{
     margin-left: 0px;
+}
+.title{
+    color: blue;
+    cursor: pointer;
 }
