--- a/bug-solving/src/app/createproject/createproject.component.css
+++ b/bug-solving/src/app/createproject/createproject.component.css
@@ -1,8 +1,3 @@
-.inputform {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
 .form {
   background-color: white;
   display: flex;
@@ -14,6 +9,8 @@
   margin: 0 auto;
   padding: 20px;
   margin-top: 5px;
+  box-shadow: -5px 5px  5px rgb(128, 128, 238);
+  /* z-index: 22; */
 }
 
 button{
