--- a/bug-solving/src/app/issueform/issueform.component.css
+++ b/bug-solving/src/app/issueform/issueform.component.css
@@ -1,10 +1,10 @@
-.inputform {
+/* .input-form {
     display: flex;
     flex-wrap: wrap;
     min-width: 150px;
     max-width: 500px;
     width: 100%;
-  }
+  } */
   
   .example-full-width {
     width: 100%;
@@ -20,6 +20,7 @@
       margin: 0 auto;
       padding: 20px;
       margin-top: 5px;
+      box-shadow: -5px 5px  5px rgb(128, 128, 238);
       
   }
   button{
