--- a/bug-solving/src/app/issuedetail/issuedetail.component.html
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.html
@@ -6,8 +6,7 @@
         >Project Name:- {{ projectdetail?.project_name }}</mat-card-title
       >
       <mat-card-subtitle>Issue:-{{ issue?.title }}</mat-card-subtitle>
-    </mat-card>
-    <mat-card>
+
       <mat-card-actions>
         <button mat-button><mat-icon>attachment</mat-icon>Attach</button>
         <button mat-button><mat-icon>task</mat-icon>Subtask</button>
@@ -20,13 +19,17 @@
         <button mat-button><mat-icon>history</mat-icon>History</button>
         <button mat-button><mat-icon>worklog</mat-icon>Work Log</button>
       </mat-card-actions>
-    </mat-card>
-    <mat-card>
-      <mat-card-content class="activity">
-        this is activity block
+      <mat-card-content class="activity" >
+        <!-- this is activity block -->
         <div *ngFor="let history of allhistory">
-          <div *ngIf="history.issue_id==issue.issue_id">
-            {{ history.data }}
+          <div *ngIf="history.issue_id == issue.issue_id" class="history">
+            <img class="image" src="{{ userdetails?.image }}" />
+            <div class="historydata" >
+              {{ userdetails?.username }} &nbsp;
+              <b> {{ history?.data }} &nbsp; </b>
+              <!-- {{history.date}} -->
+              {{ moment(history.date, "YYYYMMDDHHmmss").fromNow() }}
+            </div>
           </div>
         </div>
       </mat-card-content>
@@ -34,9 +37,9 @@
   </div>
   <div class="issuedetails">
     <mat-card>
-      <mat-form-field>
+      <mat-form-field appearance="fill">
         <mat-label>To Do</mat-label>
-        <mat-select>
+        <mat-select [(value)]="selected" (selectionChange)="update(selected)">
           <mat-option>Clear</mat-option>
           <mat-option value="progress">IN PROGRESS</mat-option>
           <mat-option value="review">IN REVIEW</mat-option>
@@ -44,6 +47,7 @@
         </mat-select>
       </mat-form-field>
     </mat-card>
+    <!-- {{selected}} -->
     <mat-card>
       <table mat-table>
         <th></th>
