--- a/bug-solving/src/app/navbar/navbar.component.html
+++ b/bug-solving/src/app/navbar/navbar.component.html
@@ -1,16 +1,13 @@
 <mat-toolbar color="primary">
-  
-    <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-    >
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span>Bug Solving</span>
   <span class="menu">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle >Project</button>
+      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
+        Project
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <div class="menulink">
           <a routerLink="/project">Project</a>
@@ -26,6 +23,6 @@
   <span class="example-spacer"></span>
   <span>{{ name }}</span>
   <img class="userimage" src="{{ photo }}" />
-  <span *ngIf="name" ><button mat-button (click)="userservice.logout()" >Sign Out</button></span>
+  <span *ngIf="name"><button mat-button (click)="userservice.logout()">Sign Out</button></span>
   <span *ngIf="!name"><a class="link" routerLink="/signin">Sign In</a></span>
 </mat-toolbar>
