--- a/bug-solving/src/app/signin/signin.component.html
+++ b/bug-solving/src/app/signin/signin.component.html
@@ -1,5 +1,7 @@
-<div class=input-container>
-    <img class="signinimage" src="https://firebasestorage.googleapis.com/v0/b/shoping-card-bc6da.appspot.com/o/productimage%2F1616044415635?alt=media&token=da801caf-5086-4173-991c-c73c8dbeda5a" alt="">
+<div class="input-container">
+    <img class="signinimage"
+        src="https://firebasestorage.googleapis.com/v0/b/shoping-card-bc6da.appspot.com/o/productimage%2F1616044415635?alt=media&token=da801caf-5086-4173-991c-c73c8dbeda5a"
+        alt="" />
     <!-- <span class="containt">Sign In</span> -->
     <div id="firebaseui-auth-container"></div>
 </div>
