--- a/bug-solving/src/app/createproject/createproject.component.html
+++ b/bug-solving/src/app/createproject/createproject.component.html
@@ -1,14 +1,18 @@
 <div class="input-form">
-    <form class="form" [formGroup]="createproject">
-        <mat-form-field class="projectname">
-            <mat-label>Project Name</mat-label>
-            <input matInput type="text" formControlName="project_name">
-          </mat-form-field>
-          <mat-form-field class="dicription" >
-            <mat-label>Dscription</mat-label>
-            <textarea matInput formControlName="discription"></textarea>
-          </mat-form-field>
-            <button mat-raised-button color="primary" (click)="onsubmit(createproject.value)">Submit</button>
-            <button mat-raised-button color="accent" type="reset" (click)="reset()">Cancle</button>
-    </form>
+  <form class="form" [formGroup]="createproject">
+    <mat-form-field class="projectname">
+      <mat-label>Project Name</mat-label>
+      <input matInput type="text" formControlName="project_name" />
+    </mat-form-field>
+    <mat-form-field class="dicription">
+      <mat-label>Dscription</mat-label>
+      <textarea matInput formControlName="discription"></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="onsubmit(createproject.value)">
+      Submit
+    </button>
+    <button mat-raised-button color="accent" type="reset" (click)="reset()">
+      Cancle
+    </button>
+  </form>
 </div>
