--- a/bug-solving/src/app/issuedetail/issuedetail.component.html
+++ b/bug-solving/src/app/issuedetail/issuedetail.component.html
@@ -1,142 +1,227 @@
 <!-- <p>{{issue?.title}}</p> -->
 <div class="container">
-    <div class="projectdetails">
-        <mat-card>
-            <mat-card-title>Project Name:- {{ projectdetail?.project_name }}</mat-card-title>
-            <mat-card-subtitle>Issue:-{{ issue?.title }}</mat-card-subtitle>
+  <div class="projectdetails">
+    <mat-card>
+      <mat-card-title
+        >Project Name:- {{ projectdetail?.project_name }}</mat-card-title
+      >
+      <mat-card-subtitle>Issue:-{{ issue?.title }}</mat-card-subtitle>
 
-            <mat-card-actions>
-                <button mat-button>
-                    <mat-icon>attachment</mat-icon>Attach
+      <mat-card-actions>
+        <button mat-button><mat-icon>attachment</mat-icon>Attach</button>
+        <button mat-button><mat-icon>task</mat-icon>Subtask</button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card>
+      <mat-card-title>Activity</mat-card-title>
+      <mat-tab-group animationDuration="0ms">
+        <mat-tab>
+          <ng-template mat-tab-label class="tab">
+            <mat-icon class="example-tab-icon">comment</mat-icon>
+            Comment
+          </ng-template>
+          <mat-card-content class="activity">
+            <form class="example-form" [formGroup]="commentform">
+              <img [src]="userservice.user.image" class="comment-image" />
+              <mat-form-field class="example-full-width">
+                <mat-label>Comment</mat-label>
+                <input
+                  formControlName="comment"
+                  type="text"
+                  matInput
+                  (focus)="onfocus()"
+                />
+              </mat-form-field>
+              <div class="comment-btn">
+                <button
+                  mat-button
+                  [hidden]="visible"
+                  (click)="submitcomment(commentform.value)"
+                >
+                  Save
                 </button>
-                <button mat-button>
-                    <mat-icon>task</mat-icon>Subtask
+                <button mat-button [hidden]="visible" (click)="resetcomment()">
+                  Cancle
                 </button>
-            </mat-card-actions>
-        </mat-card>
-        <mat-card>
-            <mat-card-title>Activity</mat-card-title>
-            <mat-tab-group animationDuration="0ms">
-                <mat-tab>
-                    <ng-template mat-tab-label class="tab">
-                        <mat-icon class="example-tab-icon">comment</mat-icon>
-                        Comment
-                    </ng-template>
-                    <mat-card-content class="activity">
-                        <form class="example-form" [formGroup]="commentform">
-                            <img [src]="userservice.user.image" class="comment-image" />
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Comment</mat-label>
-                                <input formControlName="comment" type="text" matInput (focus)="onfocus()" />
-                            </mat-form-field>
-                            <div class="comment-btn">
-                                <button mat-button [hidden]="visible" (click)="submitcomment(commentform.value)">
-                                    Save
-                                </button>
-                                <button mat-button [hidden]="visible" (click)="resetcomment()">
-                                    Cancle
-                                </button>
-                            </div>
-                        </form>
-                        <div class="comment" *ngFor="let details of comment">
-                            <div *ngFor="let user of userdetails">
-                                <div *ngIf="details?.user_id == user?.user_id">
-                                    <div class="user-comment-data">
-                                        <img class="comment-data-image" src="{{ user?.image }}" />
-                                        <div class="comment-user">
-                                            {{ user?.username }}
-                                        </div>
-                                    </div>
-                                    <div class="comment-data">
-                                        {{ details?.data }} &nbsp;
-                                        <!-- {{history.date}} -->
-                                        {{ moment(details.date, "YYYYMMDDHHmmss").fromNow() }}
-                                    </div>
-                                    <div class="icon">
-                                        <mat-icon>thumb_up</mat-icon>
-                                        <mat-icon>thumb_down</mat-icon>
-                                        <mat-icon>reply</mat-icon>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </mat-card-content>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon class="example-tab-icon">history</mat-icon>
-                        History
-                    </ng-template>
-                    <mat-card-content class="activity">
-                        <!-- this is activity block -->
-                        <div *ngFor="let history of allhistory">
-                            <div *ngFor="let user of userdetails">
-                                <div *ngIf="history?.user_id == user?.user_id" class="history">
-                                    <img class="image" src="{{ user?.image }}" />
-                                    <div class="historydata">
-                                        {{ user?.username }} &nbsp;
-                                        <b> {{ history?.data }} &nbsp; </b>
-                                        <!-- {{history.date}} -->
-                                        {{ moment(history.date, "YYYYMMDDHHmmss").fromNow() }}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </mat-card-content>
-                </mat-tab>
-            </mat-tab-group>
-        </mat-card>
-    </div>
-    <div class="issuedetails">
-        <mat-card>
-            <mat-form-field appearance="fill">
-                <mat-label>To Do</mat-label>
-                <mat-select [(value)]="selected" (selectionChange)="update(selected)">
-                    <mat-option>Clear</mat-option>
-                    <mat-option value="progress">IN PROGRESS</mat-option>
-                    <mat-option value="review">IN REVIEW</mat-option>
-                    <mat-option value="done">DONE</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </mat-card>
-        <!-- {{selected}} -->
-        <mat-card>
-            <table mat-table>
-                <th></th>
-                <th></th>
-                <tr>
-                    <td>Assignee</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Created By</td>
-                    <div *ngFor="let user of userdetails">
-                        <td *ngIf="user?.user_id == issue?.user_id">
-                            <img class="image" src="{{ user?.image }}" />{{ user?.username }}
-                        </td>
+              </div>
+            </form>
+            <div class="comment" *ngFor="let details of comment">
+              <div *ngFor="let user of userdetails">
+                <div *ngIf="details?.user_id == user?.user_id">
+                  <div class="user-comment-data">
+                    <img class="comment-data-image" src="{{ user?.image }}" />
+                    <div class="comment-user">
+                      {{ user?.username }}
                     </div>
-                </tr>
-                <tr>
-                    <td>Issue Name</td>
-                    <td>{{ issue?.title }}</td>
-                </tr>
-                <tr>
-                    <td>Discription</td>
-                    <td>{{ issue?.discription }}</td>
-                </tr>
-                <tr>
-                    <td>step to replicate</td>
-                    <td>{{ issue?.replicate }}</td>
-                </tr>
-                <tr>
-                    <td>Expected Result</td>
-                    <td>{{ issue?.expectedresult }}</td>
-                </tr>
-                <tr>
-                    <td>Status</td>
-                    <td>{{ issue?.status }}</td>
-                </tr>
-            </table>
-        </mat-card>
-    </div>
+                  </div>
+                  <div class="comment-data">
+                    {{ details?.data }} &nbsp;
+                    <!-- {{history.date}} -->
+                    {{ moment(details.date, "YYYYMMDDHHmmss").fromNow() }}
+                  </div>
+                  <div class="icon">
+                    <button mat-button>
+                      <mat-icon>thumb_up</mat-icon>
+                    </button>
+                    <button mat-button>
+                      <mat-icon>thumb_down</mat-icon>
+                    </button>
+                    <button mat-button (click)="reply()">
+                      <mat-icon>comment</mat-icon>
+                    </button>
+                  </div>
+
+                  <div
+                    class="btn-group"
+                    ngbDropdown
+                    role="group"
+                    aria-label="Button group with nested dropdown"
+                  >
+                    <button
+                      class="btn btn-outline-primary"
+                      ngbDropdownToggle
+                      (click)="viewreply(details.id)"
+                    >
+                      View Reply
+                    </button>
+
+                    <div
+                      class="dropdown-menu"
+                      ngbDropdownMenu
+                      aria-labelledby="navbarDropdown1"
+                    >
+                      <div *ngFor="let user of userdetails">
+                        <div
+                          class="item"
+                          ngbDropdownItem
+                          *ngFor="let details of replydetails"
+                        >
+                          <div *ngIf="details?.user_id == user?.user_id">
+                            <img
+                              class="comment-data-image"
+                              src="{{ user?.image }}"
+                            />
+                            <div class="comment-user">
+                              {{ user?.username }}
+                            </div>
+
+                            {{ details?.data }}
+                            {{
+                              moment(details.date, "YYYYMMDDHHmmss").fromNow()
+                            }}
+
+                            <div class="icon">
+                              <button mat-button>
+                                <mat-icon>thumb_up</mat-icon>
+                              </button>
+                              <button mat-button>
+                                <mat-icon>thumb_down</mat-icon>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">history</mat-icon>
+            History
+          </ng-template>
+          <mat-card-content class="activity">
+            <!-- this is activity block -->
+            <div *ngFor="let history of allhistory">
+              <div *ngFor="let user of userdetails">
+                <div *ngIf="history?.user_id == user?.user_id" class="history">
+                  <img class="image" src="{{ user?.image }}" />
+                  <div class="historydata">
+                    {{ user?.username }} &nbsp;
+                    <b> {{ history?.data }} &nbsp; </b>
+                    <!-- {{history.date}} -->
+                    {{ moment(history.date, "YYYYMMDDHHmmss").fromNow() }}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card>
+  </div>
+  <div class="issuedetails">
+    <mat-card>
+      <mat-form-field appearance="fill">
+        <mat-label>To Do</mat-label>
+        <mat-select [(value)]="selected" (selectionChange)="update(selected)">
+          <mat-option>Clear</mat-option>
+          <mat-option value="progress">IN PROGRESS</mat-option>
+          <mat-option value="review">IN REVIEW</mat-option>
+          <mat-option value="done">DONE</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card>
+    <!-- {{selected}} -->
+    <mat-card>
+      <table mat-table>
+        <th></th>
+        <th></th>
+        <tr>
+          <td>Assignee</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Created By</td>
+          <div *ngFor="let user of userdetails">
+            <td *ngIf="user?.user_id == issue?.user_id">
+              <img class="image" src="{{ user?.image }}" />{{ user?.username }}
+            </td>
+          </div>
+        </tr>
+        <tr>
+          <td>Issue Name</td>
+          <td>{{ issue?.title }}</td>
+        </tr>
+        <tr>
+          <td>Discription</td>
+          <td>{{ issue?.discription }}</td>
+        </tr>
+        <tr>
+          <td>step to replicate</td>
+          <td>{{ issue?.replicate }}</td>
+        </tr>
+        <tr>
+          <td>Expected Result</td>
+          <td>{{ issue?.expectedresult }}</td>
+        </tr>
+        <tr>
+          <td>Status</td>
+          <td>{{ issue?.status }}</td>
+        </tr>
+      </table>
+    </mat-card>
+  </div>
 </div>
+
+<!-- <form class="example-form" [formGroup]="commentreply" [hidden]="visiblereply">
+    <img [src]="userservice.user.image" class="comment-image" />
+    <mat-form-field class="example-full-width">
+        <mat-label>Comment</mat-label>
+        <input formControlName="comment" type="text" matInput (focus)="onfocus()"
+            autofocus />
+    </mat-form-field>
+    <div class="comment-btn">
+        <button mat-button [hidden]="visible" (click)="
+submitcommentreply(details.id, commentreply.value)
+">
+            Save
+        </button>
+        <button mat-button [hidden]="visible" (click)="resetcomment()">
+            Cancle
+        </button>
+    </div>
+</form> -->
